# rusty-tinc

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
crates/tinc-core/: Cargo.toml
crates/tinc-core/src/: config.rs  graph.rs  lib.rs  protocol.rs  route.rs  state.rs  subnet.rs  utils.rs
crates/tinc-runtime/: Cargo.toml
crates/tinc-runtime/src/: config.rs  connection.rs  device.rs  engine.rs  key_exchange.rs  legacy_meta.rs  lib.rs  meta.rs  sptps.rs  transport.rs
crates/tinc-test-support/: Cargo.toml
crates/tinc-test-support/src/: lib.rs
crates/tincctl/: Cargo.toml
crates/tincctl/src/: lib.rs  main.rs
crates/tincd/: Cargo.toml
crates/tincd/src/: cli.rs  constants.rs  control.rs  device.rs  event_loop.rs  lib.rs  listeners.rs  logging.rs  main.rs  meta.rs  platform.rs  prelude.rs  runtime_config.rs  server.rs  state.rs  transport.rs  upnp.rs
crates/tincd/src/tests/: autoconnect.rs  config_cli.rs  control.rs  device.rs  key_meta.rs  listeners_server.rs  misc.rs  mod.rs  outgoing.rs  platform.rs  scripts_logging.rs  transport_legacy.rs  transport_sptps.rs  transport_udp_pmtu.rs  upnp.rs
crates/tincd/tests/: netns_smoke.rs
