[package]
name = "tinc-runtime"
description = "Runtime device and event-loop building blocks for the Rust tinc rewrite"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
chacha20 = "0.9"
curve25519-dalek = "4"
flate2 = "1"
getrandom = "0.2"
hmac = "0.12"
lz4_flex = "0.11"
lzo-sys = { version = "1.1", optional = true }
libc = "0.2"
openssl = { version = "0.10", optional = true }
openssl-sys = { version = "0.9", optional = true }
poly1305 = "0.8"
rsa = "0.9"
sha1 = "0.10"
sha2 = "0.10"
tinc-core = { path = "../tinc-core" }

[features]
default = ["lzo", "openssl-legacy"]
jumbograms = ["tinc-core/jumbograms"]
lzo = ["dep:lzo-sys"]
openssl-legacy = ["dep:openssl", "dep:openssl-sys"]

[lib]
name = "tinc_runtime"
path = "src/lib.rs"

[dev-dependencies]
tinc-test-support = { path = "../tinc-test-support" }
