[package]
name = "tincctl"
description = "Rust tinc control command entry point"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[[bin]]
name = "tinc"
path = "src/main.rs"

[dependencies]
getrandom = "0.2"
libc = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
tinc-core = { path = "../tinc-core" }
tinc-runtime = { path = "../tinc-runtime", default-features = false }

[features]
default = ["lzo", "openssl-legacy"]
jumbograms = ["tinc-core/jumbograms", "tinc-runtime/jumbograms"]
lzo = ["tinc-runtime/lzo"]
openssl-legacy = ["tinc-runtime/openssl-legacy"]

[dev-dependencies]
tinc-test-support = { path = "../tinc-test-support" }
